parnaie/assets/styles.css
/* ... */
.popup div > h2 {
  padding: 1rem;
}

#about-content {
  opacity: 0;
}

#share-content {
  opacity: 0;
}

#content {
  flex-grow: 1;
  display: flex;
  flex-direction: column;
  align-items: stretch;
  align-content: stretch;
  justify-content: center;
}

#title {
  font-family: 'Merriweather', serif;
  margin: 0 0 2rem 0;
}

#word {
  margin-right: 0.5rem;
}

@media screen and (max-width: 600px) {
  #word {
    display: block;
  }
}

#type {
  font-size: 1.3rem;
  color: grey;
  opacity: 0.5;
}

#definition {
  padding: 0;
  margin: 0;
  font-family: 'Open Sans', sans-serif;
  font-size: 1.2rem;
  font-weight: 600;
  list-style: none;
}

#controls {
  display: flex;
  flex-direction: row;
  align-content: center;
  align-items: center;
  justify-content: center;
  background: #fffcfa;
}

#next {
  cursor: pointer;
  border-radius: 50%;
  padding: 1rem;
  margin-bottom: 0.5rem;
  border: 1px solid transparent;
}

#upvote svg, #downvote svg{
  width: 2rem;
  height: 2rem;
  fill: #a0656e;
  opacity: 0.7;
  transition: all 0.3s ease-in-out;
}

#upvote svg:hover, #downvote svg:hover{
  fill: #d81c23;
  opacity: 1;
}

#next svg{
  width: 3.5rem;
  transition: all 0.3s ease-in-out;
  display: flex;
}

#next:hover svg{
  fill: #d81c23;
}

.side-btn {
  width: 3.5rem;
  height: 3.5rem;
  margin: 0 1rem;
  display: flex;
  justify-content: space-around;
  flex-direction: row;
  align-content: center;
  cursor: pointer;
  border: 1px solid transparent;
  border-radius: 50%;
}

.side-btn:hover svg{
  fill: #000000;
}
.side-btn svg {
  width: 2rem;
  fill: #4f4e4e;
  transition: all 0.3s ease-in-out;
}

